--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,40 +1,26 @@
 name = "inconigto-mode"
 main = "_worker.js"
 compatibility_date = "2023-05-26"
-# node_compat = true
 workers_dev = true
+
+domains = [
+  "inconigto.web.id",
+  "inconigto.biz.id",
+  "inconigtovpn.web.id",
+  "inconigtovpn.biz.id"
+]
+
 routes = [
-  { pattern = "inconigto.web.id", custom_domain = true },
-  { pattern = "ava.game.naver.com.inconigto.web.id", custom_domain = true },
-  { pattern = "df.game.naver.com.inconigto.web.id", custom_domain = true },
-  { pattern = "graph.instagram.com.inconigto.web.id", custom_domain = true },
-  { pattern = "zaintest.vuclip.com.inconigto.web.id", custom_domain = true },
-  { pattern = "support.zoom.us.inconigto.web.id", custom_domain = true },  
-  { pattern = "cache.netflix.com.inconigto.web.id", custom_domain = true },
-
-  { pattern = "inconigto.biz.id", custom_domain = true },
-  { pattern = "ava.game.naver.com.inconigto.biz.id", custom_domain = true },
-  { pattern = "df.game.naver.com.inconigto.biz.id", custom_domain = true },
-  { pattern = "graph.instagram.com.inconigto.biz.id", custom_domain = true },
-  { pattern = "zaintest.vuclip.com.inconigto.biz.id", custom_domain = true },
-  { pattern = "support.zoom.us.inconigto.biz.id", custom_domain = true },  
-  { pattern = "cache.netflix.com.inconigto.biz.id", custom_domain = true },
-
-  { pattern = "inconigtovpn.web.id", custom_domain = true },
-  { pattern = "ava.game.naver.com.inconigtovpn.web.id", custom_domain = true },
-  { pattern = "df.game.naver.com.inconigtovpn.web.id", custom_domain = true },
-  { pattern = "graph.instagram.com.inconigtovpn.web.id", custom_domain = true },
-  { pattern = "zaintest.vuclip.com.inconigtovpn.web.id", custom_domain = true },
-  { pattern = "support.zoom.us.inconigtovpn.web.id", custom_domain = true },  
-  { pattern = "cache.netflix.com.inconigtovpn.web.id", custom_domain = true },
-
-  { pattern = "inconigtovpn.biz.id", custom_domain = true },
-  { pattern = "ava.game.naver.com.inconigtovpn.biz.id", custom_domain = true },
-  { pattern = "df.game.naver.com.inconigtovpn.biz.id", custom_domain = true },
-  { pattern = "graph.instagram.com.inconigtovpn.biz.id", custom_domain = true },
-  { pattern = "zaintest.vuclip.com.inconigtovpn.biz.id", custom_domain = true },
-  { pattern = "support.zoom.us.inconigtovpn.biz.id", custom_domain = true },  
-  { pattern = "cache.netflix.com.inconigtovpn.biz.id", custom_domain = true }
+  for domain in domains {
+    { pattern = domain, custom_domain = true },
+    { pattern = "ava.game.naver.com.${domain}", custom_domain = true },
+    { pattern = "df.game.naver.com.${domain}", custom_domain = true },
+    { pattern = "graph.instagram.com.${domain}", custom_domain = true },
+    { pattern = "zaintest.vuclip.com.${domain}", custom_domain = true },
+    { pattern = "support.zoom.us.${domain}", custom_domain = true },
+    { pattern = "cache.netflix.com.${domain}", custom_domain = true },
+    { pattern = "quiz.int.vidio.com.${domain}", custom_domain = true }  # Fixed the extra 'c'
+  }
 ]
 
 [vars]
